z-index fix

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -137,7 +137,7 @@ nav {
             top: 0;
             left: 0;
             position: fixed;
-            z-index: 3;
+            z-index: 90;
             margin: 0;
 
             a {
@@ -171,7 +171,7 @@ nav {
             position: absolute;
             top: 15px;
             right: 15px;
-            z-index: 2;
+            z-index: 80;
         }
 
         .close-icon {
